fix: [PIPE-20022]: Fix MultiTypeInput Select value field with overlap label (#1463)

--- a/packages/uicore/src/components/Select/Select.css
+++ b/packages/uicore/src/components/Select/Select.css
@@ -177,3 +177,7 @@
   color: var(--grey-500);
   padding: 8px 0px 0px 7px;
 }
+
+.target {
+  width: 100%;
+}
